--- a/src/components/FriendList/friendList.module.css
+++ b/src/components/FriendList/friendList.module.css
@@ -1,40 +1,14 @@
-.friend_list {
-	width: 425px;
-	height: 450px;
-	margin: auto;
-	border: solid 1px rgb(211, 221, 221);
+nes (10 sloc)  153 Bytes
+
+.frindSection {
+  margin-bottom: 30px;
 }
 
-.item {
-	display: flex;
-  align-items: center;
-  margin: 20px;
-  box-shadow: 0 0 1em;
-  padding-left: 10px;
-  border-radius: 3px;
-}
+.friendList {
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
 
- 
-.statusOnline,
-.statusOffline {
-    display: block;
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    background-color: green;
-    margin: 0 15px 0 15px;
-}
-
-.statusOffline {
-    background-color: red;
-}
-
-.avatar {
-    border-radius: 10px;
-    margin: 10px;
-}
-
-.name {
-    font-size: 24px;
-  font-weight: 600;
+  width: 400px;
+  margin: 0 auto;
 }
